# opencl-practice

./: .gitmodules  README.md
human_detection/: README.md  pedestrian_detector_static.py  pedestrian_detector_video.py  streamer_client.py  streamer_server.py
image_processing/: Makefile
image_processing/include/: utils.hpp
image_processing/kernels/: copy.cl  resize.cl
image_processing/src/: cpu_filter_image.cpp  cpu_resize_image.cpp  filter_image.cpp  read_image.cpp  read_image_map.cpp  resize_image.cpp  resize_image_map.cpp
ros2-opencl/: Dockerfile  framework_humble.repos  run_image.sh
ros2-opencl/ros_ws/analyses/: rectify_resize_cl.csv  rectify_resize_cpu.csv
ros2-opencl/ros_ws/kernels/: copy.cl  filter.cl  gpu_vadd.cl  oldfilter.cl  rectify.cl  resize.cl
ros2-opencl/ros_ws/src/bag_reading_cpp/: CMakeLists.txt  package.xml
ros2-opencl/ros_ws/src/bag_reading_cpp/include/bag_reading_cpp/: 2_nodes_image_proc.hpp  image_bag_reader.hpp  image_proc.hpp  utils.hpp
ros2-opencl/ros_ws/src/bag_reading_cpp/src/: check_svm.cpp  image_bag_reader copy.cpp  image_bag_reader.cpp  image_rectify.cpp  image_rectify_cpu.cpp  image_resize.cpp  image_resize_cpu.cpp  rectify_cl.cpp  rectify_cpu.cpp  rectify_resize_cl.cpp  rectify_resize_cpu.cpp  resize_cl.cpp  resize_cpu.cpp  zerocopy_test.cpp
ros2-opencl/ros_ws_2/results/: analyze_a1_rectify_resize_combined.txt  analyze_a1_rectify_resize_seperate.txt  analyze_a2_rectify.txt  analyze_a5_resize.txt  analyze_img_proc_a2_rectify.txt  analyze_img_proc_a5_resize.txt  analyze_img_proc_a5_resize_2x.txt  cpu_resize.json  gpu_resize.json  gpu_resize_power.json
ros2-opencl/ros_ws_2/src/bag_reading_cpp/: CMakeLists.txt  package.xml
ros2-opencl/ros_ws_2/src/bag_reading_cpp/include/bag_reading_cpp/: image_input_component.hpp  image_proc.hpp  rectify_cl.hpp  rectify_resize_cl.hpp
ros2-opencl/ros_ws_2/src/bag_reading_cpp/launch/: analyze_a1_rectify_resize_combined.launch.py  analyze_a1_rectify_resize_seperate.launch.py  analyze_a5_rectify.launch.py  analyze_a5_resize.launch.py  trace_a1_rectify_resize_combined_launch.py  trace_a1_rectify_resize_seperate_launch.py  trace_a5_rectify_launch.py  trace_a5_resize_auto_launch.py  trace_a5_resize_launch.py
ros2-opencl/ros_ws_2/src/bag_reading_cpp/src/: gpu_vadd.cpp  image_input_component.cpp  rectify_cl.cpp  rectify_resize_cl.cpp  resize_cl.cpp  sync_node.cpp
vector_add/: vector_add.cpp
vector_add/cpu_vadd_tracing/: Makefile  cpu_vadd  cpu_vadd.cpp  cpu_vadd_tp.c  cpu_vadd_tp.h
vector_add/gpu_vadd_tracing/: Makefile  gpu_vadd  gpu_vadd.cpp  gpu_vadd_tp.c
vector_add/gpu_vadd_tracing/include/: gpu_vadd_tp.h
vector_add/gpu_vadd_tracing/kernels/: gpu_vadd.cl
