<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_reading_cpp</name>
  <version>0.0.0</version>
  <description>CPP bag reader</description>
  <maintainer email="anushree.sabnis@accelerationrobotics.com">Anushree Sabnis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>opencv</build_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>tracetools_image_pipeline</depend>
  <depend>a1_perception_2nodes</depend>
  <depend>ros2_benchmark</depend>
  <depend>tracetools_benchmark</depend>
  <depend>message_filters</depend>


  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
